--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -9,7 +9,7 @@
           placeholder: 'The curly fries here are AWESOME.', autofocus: true, required: true,
           label: { icon: fa_icon('quote-left'), title: 'Comment' } %>
           
-  <div class="row">
+  <div class="action row">
     <div class="large-6 columns">
       <%= link_to tour_path(@comment.tour), class: 'large secondary button expand' do %>
         <%= fa_icon :undo %> Cancel
