--- a/app/views/tours/index.html.erb
+++ b/app/views/tours/index.html.erb
@@ -1,3 +1,13 @@
+<div class="form-title row">
+  <h1>All tours:</h1>
+</div>
+
+<hgroup class="row text-center">
+  <h2 class="red large-3 columns"><%=h "<Name>" %></h2>
+  <h2 class="red large-3 columns"><%=h "<Latitude>" %></h2>
+  <h2 class="red large-3 columns end"><%=h "<Longitude>" %></h2>
+</hgroup>
+
 <h1>Listing tours</h1>
 
 <table>
