--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+section {
+  &.events, &.friends {
+    margin-bottom: 2rem;
+  }
+}
+
+section.friends hgroup span {
+  margin-right: 0.5rem;
+}
