--- a/app/views/cities/edit.html.erb
+++ b/app/views/cities/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing city</h1>
+<div class="row">
+  <h1>Edit city:</h1>
+</div>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @city %> |
-<%= link_to 'Back', cities_path %>
