--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,29 +1,35 @@
-<h1>Listing cities</h1>
+<div class="form-title row">
+  <h1>All cities:</h1>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<hgroup class="row text-center">
+  <h2 class="red large-3 columns"><%=h "<Name>" %></h2>
+  <h2 class="red large-3 columns"><%=h "<Latitude>" %></h2>
+  <h2 class="red large-3 columns end"><%=h "<Longitude>" %></h2>
+</hgroup>
 
-  <tbody>
-    <% @cities.each do |city| %>
-      <tr>
-        <td><%= city.name %></td>
-        <td><%= city.latitude %></td>
-        <td><%= city.longitude %></td>
-        <td><%= link_to 'Show', city %></td>
-        <td><%= link_to 'Edit', edit_city_path(city) %></td>
-        <td><%= link_to 'Destroy', city, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<ol class="row text-center content">
+  <% @cities.each do |city| %>
+    <li>
+      <h5 class="large-3 columns"><%= city.name %></h5>
+      <h5 class="large-3 columns"><%= city.latitude %></h5>
+      <h5 class="large-3 columns"><%= city.longitude %></h5>
+      <h5 class="large-3 columns">
+        <%= link_to city, class: 'borderless-button' do %>
+          <%= fa_icon :eye %>
+        <% end %>
+        <%= link_to edit_city_path(city), class: 'borderless-button' do %>
+          <%= fa_icon :pencil %>
+        <% end %>  
+      </h5>      
+    </li>
+  <% end %>
+</ol>
+
+<div class="row">
+  <div class="large-6 large-centered columns">
+    <%= link_to new_city_path, class: 'large success button expand' do %>
+      <%= fa_icon :plus %> Add a new city
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New City', new_city_path %>
+  </div>
+</div>
