--- a/app/views/cities/new.html.erb
+++ b/app/views/cities/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New city</h1>
+<div class="form-title row">
+  <h1>Add a city:</h1>
+</div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', cities_path %>
