--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing comment</h1>
+<div class="form-title row">
+  <h1>Edit your comment:</h1>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @comment %> |
-<%= link_to 'Cancel', root_url %>
