--- a/app/views/tour_stops/_form.html.erb
+++ b/app/views/tour_stops/_form.html.erb
@@ -1,15 +1,25 @@
 <!-- Show venues located in the tour's city, which haven't already been proposed. -->
-<ul class="large-block-grid-4">
-  <% Venue.unproposed_for(@tour_stop).each do |venue| %>
-    <li>
-      <%= form_for(@tour_stop) do |f| %> 
-        <%= f.hidden_field :tour_id %>
-        <%= f.hidden_field :venue_id, value: venue.to_param %>
-        
-        <div class="actions">
-          <%= f.submit venue.name, class: "large radius button" %>
-        </div>
-      <% end %>
-    </li>
-  <% end %>
-</ul>
+<div class="content row">
+  <ul class="text-center large-block-grid-4">
+    <% Venue.unproposed_for(@tour_stop).each do |venue| %>
+      <li>
+        <%= form_for(@tour_stop) do |f| %> 
+          <%= f.hidden_field :tour_id %>
+          <%= f.hidden_field :venue_id, value: venue.to_param %>
+          
+          <div class="actions">
+            <%= f.submit venue.name, class: "large radius button" %>
+          </div>
+        <% end %>
+      </li>
+    <% end %>
+  </ul>
+</div>
+  
+<div class="row">
+  <div class="large-6 large-centered columns">
+    <%= link_to tour_path(@tour_stop.tour), class: 'large secondary button expand' do %>
+      <%= fa_icon :undo %> Cancel
+    <% end %>
+  </div>
+</div>
