--- a/app/views/tour_stops/new.html.erb
+++ b/app/views/tour_stops/new.html.erb
@@ -1,9 +1,9 @@
-<div class="row">
+<div class="form-title row">
   <h1>Pick a venue:</h1>
 </div>
 
-<div class="row">
-  <%= render 'form' %>  
-</div>
+
+<%= render 'form' %>  
+
 
 
