--- a/app/views/tours/_comment.html.erb
+++ b/app/views/tours/_comment.html.erb
@@ -1,7 +1,18 @@
-<p>
+<article>
   <span class="comment-text"><%= comment.text %></span>
+  <span class="comment-dash">&mdash;</span>
   <span class="comment-commenter"><%= comment.commenter.name %></span>
-  <span class="comment-time"><%= comment.created_at.strftime("%A, %b %e '%y at %I:%M%p") %></span>
-  <span class="comment-edit"><%= link_to 'Edit', edit_comment_path(comment) %></span>
-</p>
-<hr />
+  <span class="comment-time"><%= comment.created_at.strftime("%A, %b.%e.%y @ %I:%M %p") %></span>
+  <% if @current_user === comment.commenter %>
+    <span class="comment-edit">
+      <%= link_to edit_comment_path(comment, comment: {id: comment.to_param}, tour_stop_id: comment.tour_stop.to_param), class: 'borderless-button' do %>
+        <%= fa_icon :'pencil' %>
+      <% end %>
+    </span>
+    <span class="comment-delete">
+      <%= link_to comment_path(comment, comment: {id: comment.to_param}, tour_stop_id: comment.tour_stop.to_param), method: :delete, class: 'borderless-button' do %>
+        <%= fa_icon :'times' %>
+      <% end %>
+    </span>
+  <% end %>
+</article>
