--- a/app/views/tours/_form.html.erb
+++ b/app/views/tours/_form.html.erb
@@ -23,7 +23,7 @@
           placeholder: '(Optional) Leave a description of your event!',
           label: { icon: fa_icon('quote-left'), title: 'Description' } %>
 
-  <div class="row">
+  <div class="action row">
     <%= button_tag class: 'large button expand' do %>
       <%= fa_icon :save %> Save Tour
     <% end %>
