--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user, builder: FoundationFormBuilder do |f| %>
+<%= form_for @user, builder: FoundationFormBuilder, class: 'content' do |f| %>
   <%= f.text_field :name, autofocus: true, required: true,
           placeholder: "John Doe", label: 'Username' %>
           
@@ -14,10 +14,10 @@
   <%= f.password_field :password_confirmation, required: true,
           placeholder: "be clever", label: 'Re-enter your password' %>
 
-
   <div class="row">
     <%= button_tag class: 'large button expand' do %>
       <%= fa_icon :plus %> Sign Up
     <% end %>
   </div>
+
 <% end %>
