--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New user</h1>
+<div class="form-title row">
+  <h1>New account data:</h1>
+</div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', users_path %>
