--- a/app/views/tours/_voting_line_item.html.erb
+++ b/app/views/tours/_voting_line_item.html.erb
@@ -2,15 +2,27 @@
   <section class="main row" data-equalizer>
     <div class="controls large-1 columns" data-equalizer-watch>
       <div>
-        <%= button_to votes_tally_path(tour_stop_id: tour_stop.to_param, score: 1), class: 'borderless-button' do %>
-          <%= fa_icon :'chevron-up lg fw' %>
-        <% end %>
+        <% if tour_stop.upvoted_by(@current_user) %>
+          <%= button_to votes_tally_path(tour_stop_id: tour_stop.to_param, score: 1), class: 'red borderless-button' do %>
+            <%= fa_icon :'chevron-up lg fw' %>
+          <% end %>
+        <% else %>
+          <%= button_to votes_tally_path(tour_stop_id: tour_stop.to_param, score: 1), class: 'borderless-button' do %>
+            <%= fa_icon :'chevron-up lg fw' %>
+          <% end %>
+        <% end %>        
       </div>
       <h3><%= tour_stop.total_score %></h3>
       <div>
-        <%= button_to votes_tally_path(tour_stop_id: tour_stop.to_param, score: -1), class: 'borderless-button' do %>
-          <%= fa_icon :'chevron-down lg fw' %>
-        <% end %>
+        <% if tour_stop.downvoted_by(@current_user) %>
+          <%= button_to votes_tally_path(tour_stop_id: tour_stop.to_param, score: -1), class: 'red borderless-button' do %>
+            <%= fa_icon :'chevron-down lg fw' %>
+          <% end %>
+        <% else %>
+          <%= button_to votes_tally_path(tour_stop_id: tour_stop.to_param, score: -1), class: 'borderless-button' do %>
+            <%= fa_icon :'chevron-down lg fw' %>
+          <% end %>
+        <% end %>        
       </div>
     </div><!-- End of voting controls -->
     
