--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,3 +1,5 @@
+$my-red: #ae0045;
+
 body {
   background-color: #fff;
   color: #333;
@@ -94,6 +96,10 @@ button.borderless-button, a.borderless-button {
   margin: 0;
   color: inherit;
   
+  .red {
+    color: $my-red;
+  }
+  
   &[disabled] {
     background: none;
         
@@ -102,8 +108,6 @@ button.borderless-button, a.borderless-button {
     }
   }
 }
-
-$my-red: #ae0045;
 
 .red {
   color: $my-red;
