--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,33 +1,42 @@
-<h1>Listing venues</h1>
+<div class="form-title row">
+  <h1>All venues:</h1>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>City</th>
-      <th>CID</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<hgroup class="row text-center">
+  <div class="row">
+    <div class="large-4 columns text-left"><h3 class="red"><%=h "<Img><Name>" %></h3></div>
+    <div class="large-2 columns"><h3 class="red"><%=h "<City>" %></h3></div>
+    <div class="large-3 columns"><h3 class="red"><%=h "<Lat, Long>" %></h3></div>
+    <div class="large-2 columns end"><h3 class="red"><%=h "<Rating>" %></h3></div>
+  </div>
+</hgroup>
 
-  <tbody>
-    <% @venues.each do |venue| %>
-      <tr>
-        <td><%= venue.name %></td>
-        <td><%= venue.city.name %></td>
-        <td><%= venue.cid %></td>
-        <td><%= venue.latitude %></td>
-        <td><%= venue.longitude %></td>
-        <td><%= link_to 'Show', venue %></td>
-        <td><%= link_to 'Edit', edit_venue_path(venue) %></td>
-        <td><%= link_to 'Destroy', venue, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<ol class="row text-center content">
+  <% @venues.each do |venue| %>
+    <li class="row" data-equalizer>
+      <div class="large-4 columns text-left" data-equalizer-watch><h5><%= image_tag venue.image_url %> <%= venue.name %></h5></div>
+      <div class="large-2 columns" data-equalizer-watch><h5><%= venue.city.name %></h5></div>
+      <div class="large-3 columns" data-equalizer-watch><h5><%= venue.latitude %>, <%= venue.longitude %></h5></div>
+      <div class="large-2 columns" data-equalizer-watch><h5><%= venue.stars %> / <%= venue.rating_count %></h5></div>
+      <div class="large-1 columns" data-equalizer-watch>
+        <h5>
+          <%= link_to venue, class: 'borderless-button' do %>
+            <%= fa_icon :eye %>
+          <% end %>
+          <%= link_to edit_venue_path(venue), class: 'borderless-button' do %>
+            <%= fa_icon :pencil %>
+          <% end %>
+        </h5>  
+      </div>      
+    </li>
+  <% end %>
+</ol>
+
+<div class="row">
+  <div class="large-6 large-centered columns">
+    <%= link_to new_venue_path, class: 'large success button expand' do %>
+      <%= fa_icon :plus %> Add a new venue
     <% end %>
-  </tbody>
-</table>
+  </div>
+</div>
 
-<br>
-
-<%= link_to 'New Venue', new_venue_path %>
