--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <nav class="top-bar" data-topbar>
       <ul class="title-area">
         <li class="name">
-          <h1><%= link_to 'Barcrawl', root_path %></h1>
+          <h1><%= link_to 'Puborbar', root_path %></h1>
         </li>
       </ul>
       
