--- a/app/views/tour_stops/_form.html.erb
+++ b/app/views/tour_stops/_form.html.erb
@@ -1,16 +1,29 @@
-<!-- Show venues located in the tour's city, which haven't already been proposed. -->
+<!-- Show 20 venues located in the tour's city, which haven't already been proposed. -->
 <div class="content row">
-  <ul class="text-center large-block-grid-4">
-    <% Venue.unproposed_for(@tour_stop).each do |venue| %>
+  <ul class="venue-list large-12 columns">
+    <% @venue_search.results.first(20).each do |venue| %>
       <li>
-        <%= form_for(@tour_stop) do |f| %> 
-          <%= f.hidden_field :tour_id %>
-          <%= f.hidden_field :venue_id, value: venue.to_param %>
-          
-          <div class="actions">
-            <%= f.submit venue.name, class: "large radius button" %>
-          </div>
-        <% end %>
+        <div class="venue-image">
+          <%= image_tag venue.image_url %>
+        </div>
+        <div class="venue-data">
+          <span class="venue-name">
+            <%= venue.name %>
+          </span>
+          <span class="venue-name">
+            <%= venue_rating_stars(venue) %>
+          </span>
+        </div>
+        
+        <div class="venue-add">
+          <%= form_for @tour_stop do |f| %> 
+            <%= f.button type: :submit, class: "radius button" do %>
+              <%= fa_icon :'plus' %>
+            <% end %>
+            <%= f.hidden_field :tour_id %>
+            <%= f.hidden_field :venue_id, value: venue.to_param %>
+          <% end %>
+        </div>
       </li>
     <% end %>
   </ul>
