--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <title><%= content_for?(:title) ? yield(:title) : "Puborbar" %></title>
 
     <%= stylesheet_link_tag    "application" %>
+<%= render 'layouts/google_analytics' %>
     <%= javascript_include_tag "vendor/modernizr" %>
     <%= csrf_meta_tags %>
     <%= favicon_link_tag %>
