--- a/app/views/tours/index.html.erb
+++ b/app/views/tours/index.html.erb
@@ -3,41 +3,51 @@
 </div>
 
 <hgroup class="row text-center">
-  <h2 class="red large-3 columns"><%=h "<Name>" %></h2>
-  <h2 class="red large-3 columns"><%=h "<Latitude>" %></h2>
-  <h2 class="red large-3 columns end"><%=h "<Longitude>" %></h2>
+  <div class="row">
+    <div class="large-2 columns text-left"><h3 class="red"><%=h "<Name>" %></h3></div>
+    <div class="large-2 columns text-left"><h3 class="red"><%=h "<Organizer>" %></h3></div>
+    <div class="large-2 columns"><h3 class="red"><%=h "<City>" %></h3></div>
+    <div class="large-2 columns"><h3 class="red"><%=h "<Time>" %></h3></div>
+    <div class="large-3 columns text-left end"><h3 class="red"><%=h "<Description>" %></h3></div>
+  </div>
 </hgroup>
 
-<h1>Listing tours</h1>
+<ol class="row text-center content">
+  <% @tours.each do |tour| %>
+    <li class="row" data-equalizer>
+      <div class="large-2 columns text-left" data-equalizer-watch>
+        <h5><%= tour.name %></h5>
+      </div>
+      <div class="large-2 columns text-left" data-equalizer-watch>
+        <h5><%= image_tag avatar_url(tour.organizer) %> <%= tour.organizer.name %></h5>
+      </div>
+      <div class="large-2 columns" data-equalizer-watch>
+        <h5><%= tour.city.name %></h5>
+      </div>
+      <div class="large-2 columns" data-equalizer-watch>
+        <h5><%= tour.starting_at.strftime("%m/%d/%y @ %H:%M") %></h5>
+      </div>
+      <div class="large-2 columns" data-equalizer-watch>
+        <h5><%= tour.description %></h5>
+      </div>
+      <div class="large-1 columns text-left" data-equalizer-watch>
+        <h5>
+          <%= link_to tour, class: 'borderless-button' do %>
+            <%= fa_icon :eye %>
+          <% end %>
+          <% if @current_user === tour.organizer %>
+            <%= link_to edit_venue_path(tour), class: 'borderless-button' do %>
+              <%= fa_icon :pencil %>
+            <% end %>
+          <% end %>
+        </h5>  
+      </div>      
+    </li>
+  <% end %>
+</ol>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Organizer</th>
-      <th>Day and Starting time</th>
-      <th>Image</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tours.each do |tour| %>
-      <tr>
-        <td><%= tour.name %></td>
-        <td><%= tour.organizer.name %></td>
-        <td><%= tour.starting_at %></td>
-        <td><%= tour.image %></td>
-        <td><%= tour.description %></td>
-        <td><%= link_to 'Show', tour %></td>
-        <td><%= link_to 'Edit', edit_tour_path(tour) %></td>
-        <td><%= link_to 'Destroy', tour, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<!--<%= link_to 'New Tour', new_tour_path %>-->
+<div class="row">
+  <div class="large-10 large-centered columns text-center">
+    <%= paginate @tours %>
+  </div>
+</div>
