Replaced 'avatar_url' helper with 'avatar_tag' and 'avatar_and_name_tag' helpers.

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,4 +1,4 @@
-$my-red: #ae0045;
+$my-red: #ff0040;
 
 body {
   background-color: #fff;
@@ -80,7 +80,7 @@ li .fa {
 }
 
 .form-title, .content {
-  margin-top: 0.2rem;
+  margin-top: 1.2rem;
   margin-bottom: 1.25rem;
 }
 
