--- a/app/views/tours/show.html.erb
+++ b/app/views/tours/show.html.erb
@@ -2,8 +2,8 @@
 
 <hgroup>
   <div class="row">
-    <div class="large-10 columns">
-      <ul>
+    <div class="large-9 columns">
+      <ul id="tour-title">
         <li id="tour-name"><h1><%= @tour.name%></h1></li>
         <% if @tour.organized_by?(@current_user) %>
           <li>
@@ -17,17 +17,17 @@
         <% end %>        
       </ul>
     </div>
-    <div class="large-2 columns">
-      by<h3><%= image_tag avatar_url(@tour.organizer) %> <%= @tour.organizer.name %></h3>
+    <div class="large-3 columns">
+      by<h3><%= avatar_and_name_tag @tour.organizer, "large" %></h3>
     </div>
   </div>
   <div class="row">
-    <div class="large-10 columns">
+    <div class="large-9 columns">
       <h3><%= @tour.starting_at.strftime("%A, %d %B %Y @ %l:%M %p") %></h3>
     </div>
   </div>
   <div class="row">
-    <div class="large-10 columns">
+    <div class="large-9 columns">
       <p id="description"><%= @tour.description %></p>
     </div>
   </div>
@@ -36,7 +36,7 @@
 
 
 <div class="row">
-  <div class="large-10 columns">
+  <div class="large-9 columns">
     <div data-magellan-expedition="fixed">
       <dl class="sub-nav">
         <dt>Venues:</dt>
@@ -80,11 +80,11 @@
     </section>
   </div>
   
-  <div class="large-2 columns">
+  <div class="large-3 columns">
     <h4>Guests:</h4>
     <ul>
       <% Invitation.where(tour_id: @tour.id).each do |invitation| %>
-        <li><%= image_tag avatar_url(invitation.user) %> <%= invitation.user.name %></li>
+        <li><%= avatar_and_name_tag invitation.user, "medium" %></li>
       <% end %>
     </ul>
   </div>
