--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,56 +1,104 @@
 div.user-avatar-small {
-  font-size: 12px;
+  $fs: 12px;
+  position: relative;
+
+  span {
+    font-size: $fs;
+    line-height: 1.25;
+    display: inline-block;
+    vertical-align: middle;
+    max-width: calc(100% - 2.75 * #{$fs});
+  }
+
   img {
-    margin: 0.25rem;
-    width: 18px;
-    height: 18px;
+    width: 2.5 * $fs;
+    height: 2.5 * $fs;
+    margin-right: 0.25rem;
   }
 }
 
 div.user-avatar-medium {
-  font-size: 18px;
+  $fs: 16px;
+  position: relative;
+
+  span {
+    font-size: $fs;
+    line-height: 1.25;
+    display: inline-block;
+    vertical-align: middle; 
+    max-width: calc(100% - 2.75 * #{$fs});
+  }
+
   img {
-    margin: 0.25rem;
-    width: 27px;
-    height: 27px;
+    width: 2.5 * $fs;
+    height: 2.5 * $fs;
+    margin-right: 0.25rem;
   }
 }
 
 div.user-avatar-large {
-  font-size: 24px;
+  $fs: 20px;
+  position: relative;
+
+  span {
+    font-size: $fs;
+    line-height: 1.25;
+    display: inline-block;
+    vertical-align: middle;
+    max-width: calc(100% - 2.75 * #{$fs});
+  }
+
   img {
-    margin: 0.25rem;
-    width: 36px;
-    height: 36px;
+    width: 2.5 * $fs;
+    height: 2.5 * $fs;
+    margin-right: 0.25rem;
   }
 }
 
 div.user-avatar-x-large {
-  font-size: 48px;
+  $fs: 48px;
+  position: relative;
+
+  span {
+    font-size: $fs;
+    line-height: 1.25;
+    display: inline-block;
+    vertical-align: middle;
+    max-width: calc(100% - 2.75 * #{$fs});
+  }
+
   img {
-    margin: 0.25rem;
-    width: 72px;
-    height: 72px;
+    width: 2.5 * $fs;
+    height: 2.5 * $fs;
+    margin-right: 0.25rem;
   }
 }
 
 
 img.avatar-small {
-  width: 18px;
-  height: 18px;
+  width: 30px;
+  height: 30px;
 }
 
 img.avatar-medium {
-  width: 27px;
-  height: 27px;
+  width: 40px;
+  height: 40px;
 }
 
 img.avatar-large {
-  width: 36px;
-  height: 36px;
+  width: 50px;
+  height: 50px;
 }
 
 img.avatar-x-large {
-  width: 72px;
-  height: 72px;
+  width: 120px;
+  height: 120px;
+}
+
+nav.top-bar ul.user-menu {
+  width: 15%;
+  
+  li {
+    float: none;
+  }
 }
