--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,24 +1,31 @@
-<h1>Listing users</h1>
+<div class="form-title row">
+  <h1>All users:</h1>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Avatar</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.name %></td>
-        <td><%= user.email %></td>
-        <td><%= avatar_tag user, "small" %></td>
-        <td><%= link_to 'Add friend', friendships_path(friend_id: user.to_param), method: :post %></td>
-      </tr>
+<hgroup class="row text-left">
+  <div class="row">
+    <div class="large-4 columns"><h3 class="red"><%=h "<Avatar> | <Name>" %></h3></div>
+    <% if @current_user.admin? %>
+      <div class="large-6 columns end"><h3 class="red"><%=h "<Email>" %></h3></div>
     <% end %>
-  </tbody>
-</table>
+  </div>
+</hgroup>
+
+<ol class="row text-left content">
+  <% @users.each do |user| %>
+    <li class="row" data-equalizer>
+      <div class="large-4 columns" data-equalizer-watch><h5><%= avatar_and_name_tag user, "large" %></h5></div>
+      <% if @current_user.admin? %>
+        <div class="large-6 columns" data-equalizer-watch><h5><%= user.email %></h5></div>
+      <% end %>
+      <div class="large-2 columns" data-equalizer-watch>
+        <h5>
+          <%= link_to friendships_path(friend_id: user.to_param), method: :post, class: 'borderless-button' do %>
+            <%= fa_icon :plus %> Add friend
+          <% end %>
+        </h5>  
+      </div>      
+    </li>
+  <% end %>
+</ol>
 
