--- a/app/assets/stylesheets/tours.css.scss
+++ b/app/assets/stylesheets/tours.css.scss
@@ -1,27 +1,13 @@
-// Place all the styles related to the Tours controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
-/*
-body {
-  background-image: url(image_path('Seoul-Lantern-Festival.jpg'));
+// TODO: set color fade for font awesome icon buttons
+.fa {
+  &:hover {
+  }
 }
-*/
 
+hgroup form {
+  display: inline;
+}
 
-// hgroup ul>li {
-  // display: inline-block;
-  // vertical-align: baseline;
-  // margin-right: 0.5rem;
-//   
-  // &#tour-name {
-    // margin-right: 3rem;
-  // }
-//   
-  // h1, button {
-    // display: inline;
-  // }
-// }
 
 [data-magellan-expedition] dl.sub-nav {
   padding: 10px 10px 10px 0;
@@ -35,8 +21,7 @@ body {
     &:not(.active):hover a {
       border-radius: 3px;
       background-color: inherit;
-    }
-    
+    }    
     .button {
       margin: 0;
       // position: fixed;
@@ -46,72 +31,56 @@ body {
   }
 }
 
-section.main.row {
+section.proposal-header {
   margin-bottom: 0.5rem;
-}
-
-.controls {
-  text-align: center;
   
-  h3 {
-    margin: 0;
-  }
-
-  button {
-    margin: 0 auto;
-  }
-}
-
-.post {
-  span {
-    display: inline-block;
-    vertical-align: middle;
-    margin-right: 1rem;
+  div.voting-controls {
+    text-align: center;
     
-    .fa-check {
-      color: #43AC6A;
-    }
-    
-    .fa-times {
-      color: #f04124;
+    h3 {
+      margin: 0;
+    }  
+    button {
+      margin: 0 auto;
     }
   }
   
-  form {
-    display: inline;
+  div.organizer-controls {
+    span {
+      display: inline-block;
+      vertical-align: middle;
+      margin-right: 1rem;
+      
+      .fa-check {
+        color: #43AC6A;
+      }      
+      .fa-times {
+        color: #f04124;
+      }
+    }    
+    form {
+      display: inline;
+    }
   }
 }
 
-
-
-// TODO: set color fade for font awesome icon buttons
-.fa {
-  &:hover {
-  }
-}
-
-.comments {
+section.proposal-comments {
   article {
     padding: 0.5rem;
     
     &:nth-child(odd) {
       background-color: #f2f2f2;
-    }
-    
+    }    
     .comment-commenter {
       color: #07c;
       margin-right: 0.5rem;
-    }
-    
+    }    
     .comment-time {
       color: #999;
       margin-right: 0.2rem;
     }
-  }
-  
+  }  
   form, form>div {
     display: inline;
-  }
-  
-  
+  }  
 }
