Resize status decision icons.

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -95,6 +95,7 @@ button.borderless-button, a.borderless-button {
   padding: 0;
   margin: 0;
   color: inherit;
+  font-size: inherit;
   
   &.red {
     color: $my-red;
