--- a/app/views/tours/_rsvp_button.html.erb
+++ b/app/views/tours/_rsvp_button.html.erb
@@ -2,14 +2,14 @@
   <%= form_for(@tour.invitation_for(@current_user).first!, method: :delete) do |f| %>
     <%= f.hidden_field :tour_id %>
     <%= f.button type: :submit, class: 'borderless-button' do %>
-      <%= fa_icon :'sign-out 2x fw' %>
+      <%= fa_icon :'sign-out fw' %>
     <% end %>
   <% end %>
 <% else %>
   <%= form_for(@tour.new_invitation) do |f| %>
     <%= f.hidden_field :tour_id %>
     <%= f.button type: :submit, class: 'borderless-button' do %>
-      <%= fa_icon :'sign-in 2x fw' %>
+      <%= fa_icon :'sign-in fw' %>
     <% end %>
   <% end %>
 <% end %>
