--- a/app/views/tours/_voting_line_item.html.erb
+++ b/app/views/tours/_voting_line_item.html.erb
@@ -1,6 +1,7 @@
-<li>
+<%= content_tag :li, data: { venue_name: tour_stop.venue.name, venue_lat: tour_stop.venue.latitude, venue_lng: tour_stop.venue.longitude } do %>
+
   <section class="proposal-header row" data-equalizer>
-    <div class="voting-controls large-1 columns" data-equalizer-watch>
+    <div class="voting-controls large-2 columns" data-equalizer-watch>
       <div>
         <% if tour_stop.upvoted_by(@current_user) %>
           <%= button_to votes_tally_path(tour_stop_id: tour_stop.to_param, score: 1), class: 'red borderless-button' do %>
@@ -26,18 +27,18 @@
       </div>
     </div><!-- End of voting controls -->
     
-    <div class="organizer-controls large-11 columns" data-equalizer-watch>
-      <h3>
+    <div class="organizer-controls large-10 columns" data-equalizer-watch>
+      <h4>
         <span><%= tour_stop.venue.name %></span>
         <% if @tour.organized_by?(@current_user) && @tour.status === "pending" %>
           <%= render partial: "status_decision_buttons", locals: {tour_stop: tour_stop} %>
         <% end %>
-      </h3>
+      </h4>
     </div><!-- End of venue description -->
   </section><!-- End of main proposal section -->
   
   <section class="proposal-comments row">
-    <div class="large-11 large-offset-1 columns">
+    <div class="large-10 large-offset-2 columns">
       <%= render partial: "comment", collection: tour_stop.comments, as: :comment %>
       <% if @tour.status === "pending" %>
         <article>
@@ -48,4 +49,5 @@
       <% end %>
     </div>
   </section><!-- End of comments section -->
-</li>
+
+<% end %>
