--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,6 @@
 
     <%= yield %>
     <%= javascript_include_tag "application" %>
-    <script src="https://maps.googleapis.com/maps/api/js?callback=onGoogleMapsLoad&key=AIzaSyACqnur47PGOEfJW3WLm-AbU2brp5FddaM"></script>
+    <script src="//maps.googleapis.com/maps/api/js?callback=onGoogleMapsLoad&key=AIzaSyACqnur47PGOEfJW3WLm-AbU2brp5FddaM"></script>
   </body>
 </html>
